--- a/styles/input.css
+++ b/styles/input.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+tbody tr:nth-child(2n) {
+    background-color: rgb(30 64 175);
+  }
